[package]
name = "zeptos"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cortex-m = "0.7.7"
cortex-m-rt = "0.7.3"
zeptos-macros = { path = "./zeptos-macros" }

atsamd11d = { version = "0.13.0", optional = true, features = ["rt"] }
atsamd21j = { version = "0.13.0", optional = true, features = ["rt"] }

[features]
# Hardware support
samd21 = ["dep:atsamd21j"]
samd11 = ["dep:atsamd11d"]

samd-clock-48m-usb = ["clock"]
samd-clock-48m-internal = ["clock"]
samd-clock-48m-external-32k-xtal = ["clock"]
samd-clock-48m-external-32k-osc = ["clock"]

clock = []


