[package]
name = "zeptos"
version = "0.1.0"
edition = "2024"

[lib]
test = false
doctest = false
bench = false

[dependencies]
cortex-m = "0.7.7"
cortex-m-rt = "0.7.3"
zeptos-macros = { path = "./zeptos-macros" }

atsamd11d = { version = "0.13.0", optional = true, features = ["rt"] }
atsamd21j = { version = "0.13.0", optional = true, features = ["rt"] }

rp-pac = { version = "7.0.0", optional = true, features = ["rt"] }
rp2040-boot2 = { version = "0.3", optional = true }

defmt = "1.0"
pin-project = "1.1.6"
scopeguard = { version = "1.2.0", default-features = false }

usb = "0.3.0"

[features]
# Hardware support
samd21 = ["dep:atsamd21j"]
samd11 = ["dep:atsamd11d"]

samd-clock-48m-usb = ["clock"]
samd-clock-48m-internal = ["clock"]
samd-clock-48m-external-32k-xtal = ["clock"]
samd-clock-48m-external-32k-osc = ["clock"]

rp2040 = ["dep:rp-pac", "rp-pac/rp2040", "clock"]
rp2040-boot2-w25q080 = ["rp2040-boot2"]
rom-func-cache = []

usb = []
time = []

clock = []


