[package]
name = "zeptos-demo"
version = "0.1.0"
edition = "2021"

[dependencies]
zeptos = { path = "../../../", features = ["rp2040", "rp2040-boot2-w25q080", "usb", "time"] }
panic-probe = "1.0"
defmt = "1.0"
defmt-rtt = "1.0"
cortex-m-rt = "0.7.3"
usb = "0.3.0"
futures-util = { version = "0.3.30", default-features = false, features = ["async-await", "async-await-macro"] }

[dependencies.cortex-m]
version = "0.7"
features = ["critical-section-single-core", "inline-asm"]

[profile.dev]
incremental = false
codegen-units = 1
lto = true
opt-level = "z"

[profile.release]
debug = true
codegen-units = 1
lto = true
opt-level = "z"

[features]
msos_composite = []
