[package]
name = "zeptos-demo"
version = "0.1.0"
edition = "2021"

[dependencies]
zeptos = { path = "../../../", features = ["samd21", "samd-clock-48m-external-32k-xtal"] }
panic-probe = "0.3"
defmt = "0.3.6"
defmt-rtt = "0.4.0"
cortex-m-rt = "0.7.3"

[dependencies.cortex-m]
version = "0.7"
features = ["critical-section-single-core", "inline-asm"]

[profile.dev]
incremental = false
codegen-units = 1
lto = true
opt-level = "z"

[profile.release]
debug = true
codegen-units = 1
lto = true
opt-level = "z"

