[package]
name = "zeptos-demo"
version = "0.1.0"
edition = "2021"

[dependencies]
zeptos = { path = "../../../", features = ["samd21", "samd-clock-48m-usb", "usb"] }
panic-probe = "1.0"
defmt = "0.3.6"
defmt-rtt = "0.4.0"
cortex-m-rt = "0.7.3"
usb = "0.3.0"

[dependencies.cortex-m]
version = "0.7"
features = ["critical-section-single-core", "inline-asm"]

[profile.dev]
incremental = false
codegen-units = 1
lto = true
opt-level = "z"

[profile.release]
debug = true
codegen-units = 1
lto = true
opt-level = "z"

